Fixing text not showing when a button is disabled

--- a/src/styles/components/buttons.css
+++ b/src/styles/components/buttons.css
@@ -54,6 +54,7 @@
 
 .btn-primary:disabled {
     -fx-background-color: -fx-medium-gray-color;
+    -fx-text-fill: #fff !important;
 }
 
 .btn-secondary {
